Logic colages a changed
