# docs/openapi.yaml
@@ -525,9 +525,12 @@ paths:
             \u0437\u044B\u0432\u0430\u044E\u0449\u0438\u0439, \u043D\u0443\u0436\u043D\
             \u043E \u043B\u0438 \u0434\u043E\u0431\u0430\u0432\u043B\u044F\u0442\u044C\
             \ \u0446\u0435\u043D\u0443 \u043D\u0430 \u043E\u0432\u0435\u0440\u043B\
-            \u0435\u0439\n\nReturns:\n    \u0424\u0430\u0439\u043B \u043A\u043E\u043B\
-            \u043B\u0430\u0436\u0430 \u0434\u043B\u044F \u0441\u043A\u0430\u0447\u0438\
-            \u0432\u0430\u043D\u0438\u044F"
+            \u0435\u0439\n    category_names: \u0421\u043F\u0438\u0441\u043E\u043A\
+            \ \u043D\u0430\u0437\u0432\u0430\u043D\u0438\u0439 \u043A\u0430\u0442\u0435\
+            \u0433\u043E\u0440\u0438\u0439 \u0434\u043B\u044F \u0444\u0438\u043B\u044C\
+            \u0442\u0440\u0430\u0446\u0438\u0438\n\nReturns:\n    \u0424\u0430\u0439\
+            \u043B \u043A\u043E\u043B\u043B\u0430\u0436\u0430 \u0434\u043B\u044F \u0441\
+            \u043A\u0430\u0447\u0438\u0432\u0430\u043D\u0438\u044F"
          operationId: create_batch_collage_collage_batch__get
          parameters:
          -  in: query
@@ -554,6 +557,22 @@ paths:
                default: true
                title: Is Price
                type: boolean
+         -  description: "\u0421\u043F\u0438\u0441\u043E\u043A \u043D\u0430\u0437\u0432\
+               \u0430\u043D\u0438\u0439 \u043A\u0430\u0442\u0435\u0433\u043E\u0440\
+               \u0438\u0439 \u0434\u043B\u044F \u0444\u0438\u043B\u044C\u0442\u0440\
+               \u0430\u0446\u0438\u0438"
+            in: query
+            name: category_names
+            required: false
+            schema:
+               description: "\u0421\u043F\u0438\u0441\u043E\u043A \u043D\u0430\u0437\
+                  \u0432\u0430\u043D\u0438\u0439 \u043A\u0430\u0442\u0435\u0433\u043E\
+                  \u0440\u0438\u0439 \u0434\u043B\u044F \u0444\u0438\u043B\u044C\u0442\
+                  \u0440\u0430\u0446\u0438\u0438"
+               items:
+                  type: string
+               title: Category Names
+               type: array
          responses:
             '200':
                content:
@@ -582,10 +601,13 @@ paths:
             \u0435 \u043A\u043E\u043B\u043B\u0430\u0436\u0438 \u0441\u0440\u0430\u0437\
             \u0443\n\nArgs:\n    batch_size: \u0420\u0430\u0437\u043C\u0435\u0440\
             \ \u043F\u0430\u043A\u0435\u0442\u0430 (\u043F\u043E \u0443\u043C\u043E\
-            \u043B\u0447\u0430\u043D\u0438\u044E 12)\n\nReturns:\n    JSON \u0441\
-            \ \u0438\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0438\u0435\u0439 \u043E\
-            \ \u0432\u0441\u0435\u0445 \u0441\u043E\u0437\u0434\u0430\u043D\u043D\u044B\
-            \u0445 \u043A\u043E\u043B\u043B\u0430\u0436\u0430\u0445"
+            \u043B\u0447\u0430\u043D\u0438\u044E 12)\n    category_names: \u0421\u043F\
+            \u0438\u0441\u043E\u043A \u043D\u0430\u0437\u0432\u0430\u043D\u0438\u0439\
+            \ \u043A\u0430\u0442\u0435\u0433\u043E\u0440\u0438\u0439 \u0434\u043B\u044F\
+            \ \u0444\u0438\u043B\u044C\u0442\u0440\u0430\u0446\u0438\u0438\n\nReturns:\n\
+            \    JSON \u0441 \u0438\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0438\
+            \u0435\u0439 \u043E \u0432\u0441\u0435\u0445 \u0441\u043E\u0437\u0434\u0430\
+            \u043D\u043D\u044B\u0445 \u043A\u043E\u043B\u043B\u0430\u0436\u0430\u0445"
          operationId: create_all_collage_info_collage_batch_all__get
          parameters:
          -  in: query
@@ -597,6 +619,22 @@ paths:
                minimum: 1
                title: Batch Size
                type: integer
+         -  description: "\u0421\u043F\u0438\u0441\u043E\u043A \u043D\u0430\u0437\u0432\
+               \u0430\u043D\u0438\u0439 \u043A\u0430\u0442\u0435\u0433\u043E\u0440\
+               \u0438\u0439 \u0434\u043B\u044F \u0444\u0438\u043B\u044C\u0442\u0440\
+               \u0430\u0446\u0438\u0438"
+            in: query
+            name: category_names
+            required: false
+            schema:
+               description: "\u0421\u043F\u0438\u0441\u043E\u043A \u043D\u0430\u0437\
+                  \u0432\u0430\u043D\u0438\u0439 \u043A\u0430\u0442\u0435\u0433\u043E\
+                  \u0440\u0438\u0439 \u0434\u043B\u044F \u0444\u0438\u043B\u044C\u0442\
+                  \u0440\u0430\u0446\u0438\u0438"
+               items:
+                  type: string
+               title: Category Names
+               type: array
          responses:
             '200':
                content:
@@ -632,10 +670,13 @@ paths:
             \ \u0424\u043B\u0430\u0433, \u0443\u043A\u0430\u0437\u044B\u0432\u0430\
             \u044E\u0449\u0438\u0439, \u043D\u0443\u0436\u043D\u043E \u043B\u0438\
             \ \u0434\u043E\u0431\u0430\u0432\u043B\u044F\u0442\u044C \u0446\u0435\u043D\
-            \u0443 \u043D\u0430 \u043E\u0432\u0435\u0440\u043B\u0435\u0439\n\nReturns:\n\
-            \    ZIP-\u0430\u0440\u0445\u0438\u0432 \u0441\u043E \u0432\u0441\u0435\
-            \u043C\u0438 \u0441\u043E\u0437\u0434\u0430\u043D\u043D\u044B\u043C\u0438\
-            \ \u043A\u043E\u043B\u043B\u0430\u0436\u0430\u043C\u0438"
+            \u0443 \u043D\u0430 \u043E\u0432\u0435\u0440\u043B\u0435\u0439\n    category_names:\
+            \ \u0421\u043F\u0438\u0441\u043E\u043A \u043D\u0430\u0437\u0432\u0430\u043D\
+            \u0438\u0439 \u043A\u0430\u0442\u0435\u0433\u043E\u0440\u0438\u0439 \u0434\
+            \u043B\u044F \u0444\u0438\u043B\u044C\u0442\u0440\u0430\u0446\u0438\u0438\
+            \n\nReturns:\n    ZIP-\u0430\u0440\u0445\u0438\u0432 \u0441\u043E \u0432\
+            \u0441\u0435\u043C\u0438 \u0441\u043E\u0437\u0434\u0430\u043D\u043D\u044B\
+            \u043C\u0438 \u043A\u043E\u043B\u043B\u0430\u0436\u0430\u043C\u0438"
          operationId: create_and_dowload_all_collages_collage_batch_all_download__get
          parameters:
          -  in: query
@@ -654,6 +695,22 @@ paths:
                default: true
                title: Is Price
                type: boolean
+         -  description: "\u0421\u043F\u0438\u0441\u043E\u043A \u043D\u0430\u0437\u0432\
+               \u0430\u043D\u0438\u0439 \u043A\u0430\u0442\u0435\u0433\u043E\u0440\
+               \u0438\u0439 \u0434\u043B\u044F \u0444\u0438\u043B\u044C\u0442\u0440\
+               \u0430\u0446\u0438\u0438"
+            in: query
+            name: category_names
+            required: false
+            schema:
+               description: "\u0421\u043F\u0438\u0441\u043E\u043A \u043D\u0430\u0437\
+                  \u0432\u0430\u043D\u0438\u0439 \u043A\u0430\u0442\u0435\u0433\u043E\
+                  \u0440\u0438\u0439 \u0434\u043B\u044F \u0444\u0438\u043B\u044C\u0442\
+                  \u0440\u0430\u0446\u0438\u0438"
+               items:
+                  type: string
+               title: Category Names
+               type: array
          responses:
             '200':
                content:
@@ -685,10 +742,13 @@ paths:
             \ \u0438\u043D\u0434\u0435\u043A\u0441 \u0434\u043B\u044F \u043E\u0431\
             \u0440\u0430\u0431\u043E\u0442\u043A\u0438\n    batch_size: \u0420\u0430\
             \u0437\u043C\u0435\u0440 \u043F\u0430\u043A\u0435\u0442\u0430 (\u043F\u043E\
-            \ \u0443\u043C\u043E\u043B\u0447\u0430\u043D\u0438\u044E 12)\n\nReturns:\n\
-            \    JSON \u0441 \u0438\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0438\
-            \u0435\u0439 \u043E \u0442\u0435\u043A\u0443\u0449\u0435\u043C \u043F\u0430\
-            \u043A\u0435\u0442\u0435"
+            \ \u0443\u043C\u043E\u043B\u0447\u0430\u043D\u0438\u044E 12)\n    category_names:\
+            \ \u0421\u043F\u0438\u0441\u043E\u043A \u043D\u0430\u0437\u0432\u0430\u043D\
+            \u0438\u0439 \u043A\u0430\u0442\u0435\u0433\u043E\u0440\u0438\u0439 \u0434\
+            \u043B\u044F \u0444\u0438\u043B\u044C\u0442\u0440\u0430\u0446\u0438\u0438\
+            \n\nReturns:\n    JSON \u0441 \u0438\u043D\u0444\u043E\u0440\u043C\u0430\
+            \u0446\u0438\u0435\u0439 \u043E \u0442\u0435\u043A\u0443\u0449\u0435\u043C\
+            \ \u043F\u0430\u043A\u0435\u0442\u0435"
          operationId: get_batch_info_collage_batch_info__get
          parameters:
          -  in: query
@@ -708,6 +768,22 @@ paths:
                minimum: 1
                title: Batch Size
                type: integer
+         -  description: "\u0421\u043F\u0438\u0441\u043E\u043A \u043D\u0430\u0437\u0432\
+               \u0430\u043D\u0438\u0439 \u043A\u0430\u0442\u0435\u0433\u043E\u0440\
+               \u0438\u0439 \u0434\u043B\u044F \u0444\u0438\u043B\u044C\u0442\u0440\
+               \u0430\u0446\u0438\u0438"
+            in: query
+            name: category_names
+            required: false
+            schema:
+               description: "\u0421\u043F\u0438\u0441\u043E\u043A \u043D\u0430\u0437\
+                  \u0432\u0430\u043D\u0438\u0439 \u043A\u0430\u0442\u0435\u0433\u043E\
+                  \u0440\u0438\u0439 \u0434\u043B\u044F \u0444\u0438\u043B\u044C\u0442\
+                  \u0440\u0430\u0446\u0438\u0438"
+               items:
+                  type: string
+               title: Category Names
+               type: array
          responses:
             '200':
                content:
@@ -728,16 +804,42 @@ paths:
          description: "\u0412\u043E\u0437\u0432\u0440\u0430\u0449\u0430\u0435\u0442\
             \ \u0441\u0442\u0430\u0442\u0443\u0441 \u043F\u0430\u043A\u0435\u0442\u043D\
             \u043E\u0439 \u043E\u0431\u0440\u0430\u0431\u043E\u0442\u043A\u0438 \u043A\
-            \u043E\u043B\u043B\u0430\u0436\u0435\u0439\n\nReturns:\n    JSON \u0441\
-            \ \u0438\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0438\u0435\u0439 \u043E\
-            \ \u0441\u0442\u0430\u0442\u0443\u0441\u0435"
+            \u043E\u043B\u043B\u0430\u0436\u0435\u0439\n\nArgs:\n    category_names:\
+            \ \u0421\u043F\u0438\u0441\u043E\u043A \u043D\u0430\u0437\u0432\u0430\u043D\
+            \u0438\u0439 \u043A\u0430\u0442\u0435\u0433\u043E\u0440\u0438\u0439 \u0434\
+            \u043B\u044F \u0444\u0438\u043B\u044C\u0442\u0440\u0430\u0446\u0438\u0438\
+            \n\nReturns:\n    JSON \u0441 \u0438\u043D\u0444\u043E\u0440\u043C\u0430\
+            \u0446\u0438\u0435\u0439 \u043E \u0441\u0442\u0430\u0442\u0443\u0441\u0435"
          operationId: get_batch_processing_status_collage_batch_status__get
+         parameters:
+         -  description: "\u0421\u043F\u0438\u0441\u043E\u043A \u043D\u0430\u0437\u0432\
+               \u0430\u043D\u0438\u0439 \u043A\u0430\u0442\u0435\u0433\u043E\u0440\
+               \u0438\u0439 \u0434\u043B\u044F \u0444\u0438\u043B\u044C\u0442\u0440\
+               \u0430\u0446\u0438\u0438"
+            in: query
+            name: category_names
+            required: false
+            schema:
+               description: "\u0421\u043F\u0438\u0441\u043E\u043A \u043D\u0430\u0437\
+                  \u0432\u0430\u043D\u0438\u0439 \u043A\u0430\u0442\u0435\u0433\u043E\
+                  \u0440\u0438\u0439 \u0434\u043B\u044F \u0444\u0438\u043B\u044C\u0442\
+                  \u0440\u0430\u0446\u0438\u0438"
+               items:
+                  type: string
+               title: Category Names
+               type: array
          responses:
             '200':
                content:
                   application/json:
                      schema: {}
                description: Successful Response
+            '422':
+               content:
+                  application/json:
+                     schema:
+                        $ref: '#/components/schemas/HTTPValidationError'
+               description: Validation Error
          summary: Get Batch Processing Status
          tags:
          - collages
@@ -777,6 +879,54 @@ paths:
                      schema: {}
                description: Successful Response
          summary: Get All Product For Collage
+         tags:
+         - collages
+   /collage/select-by-categories/:
+      get:
+         description: "\u0412\u043E\u0437\u0432\u0440\u0430\u0449\u0430\u0435\u0442\
+            \ \u0442\u043E\u0432\u0430\u0440\u044B \u043F\u043E \u0437\u0430\u0434\
+            \u0430\u043D\u043D\u044B\u043C \u043A\u0430\u0442\u0435\u0433\u043E\u0440\
+            \u0438\u044F\u043C \u0434\u043B\u044F \u0441\u043E\u0437\u0434\u0430\u043D\
+            \u0438\u044F \u043A\u043E\u043B\u043B\u0430\u0436\u0435\u0439\n\nArgs:\n\
+            \    category_names: \u0421\u043F\u0438\u0441\u043E\u043A \u043D\u0430\
+            \u0437\u0432\u0430\u043D\u0438\u0439 \u043A\u0430\u0442\u0435\u0433\u043E\
+            \u0440\u0438\u0439 \u0434\u043B\u044F \u0444\u0438\u043B\u044C\u0442\u0440\
+            \u0430\u0446\u0438\u0438\n\nReturns:\n    JSON \u0441 \u0438\u043D\u0444\
+            \u043E\u0440\u043C\u0430\u0446\u0438\u0435\u0439 \u043E \u0442\u043E\u0432\
+            \u0430\u0440\u0430\u0445 \u0438 \u0432\u043E\u0437\u043C\u043E\u0436\u043D\
+            \u043E\u0441\u0442\u044F\u0445 \u0441\u043E\u0437\u0434\u0430\u043D\u0438\
+            \u044F \u043A\u043E\u043B\u043B\u0430\u0436\u0435\u0439"
+         operationId: get_products_by_categories_collage_select_by_categories__get
+         parameters:
+         -  description: "\u0421\u043F\u0438\u0441\u043E\u043A \u043D\u0430\u0437\u0432\
+               \u0430\u043D\u0438\u0439 \u043A\u0430\u0442\u0435\u0433\u043E\u0440\
+               \u0438\u0439 \u0434\u043B\u044F \u0444\u0438\u043B\u044C\u0442\u0440\
+               \u0430\u0446\u0438\u0438"
+            in: query
+            name: category_names
+            required: true
+            schema:
+               description: "\u0421\u043F\u0438\u0441\u043E\u043A \u043D\u0430\u0437\
+                  \u0432\u0430\u043D\u0438\u0439 \u043A\u0430\u0442\u0435\u0433\u043E\
+                  \u0440\u0438\u0439 \u0434\u043B\u044F \u0444\u0438\u043B\u044C\u0442\
+                  \u0440\u0430\u0446\u0438\u0438"
+               items:
+                  type: string
+               title: Category Names
+               type: array
+         responses:
+            '200':
+               content:
+                  application/json:
+                     schema: {}
+               description: Successful Response
+            '422':
+               content:
+                  application/json:
+                     schema:
+                        $ref: '#/components/schemas/HTTPValidationError'
+               description: Validation Error
+         summary: Get Products By Categories
          tags:
          - collages
    /media/{image_id}:
